# VDownloader

./: .dockerignore  .env.docker  .env.example  .gitignore  API.md  API_REFERENCE.md  ARCHITECTURE.md  BUILD.md  BUILD_STATUS.md  CHANGELOG.md  CODEBASE_INDEX.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  DISTRIBUTION.md  Dockerfile  INTEGRATION_SUMMARY.md  LICENSE  PLATFORM_INTEGRATIONS.md  PR_SUMMARY.md  QUICKSTART.md  QUICK_BUILD.md  README.md  RELEASE.md  RESEARCH_VIDEO_EXTRACTION.md  SETUP.md  TESTING.md  WINDOWS_PORTABLE.md  WINDOWS_PORTABLE_TROUBLESHOOTING.md  build-appimage.sh  build-macos.sh  build-windows-portable.bat  build.bat  build.sh  docker-compose.yml  package-lock.json  package.json  test-integration.sh  vdownloader-linux
.github/: copilot-instructions.md
.github/workflows/: build.yml
backend/: app.js  server.js  websocket.js
backend/adapters/: adapterFactory.js  baseAdapter.js  instagramAdapter.js  redditAdapter.js  tiktokAdapter.js  twitterAdapter.js  youtubeAdapter.js
backend/controllers/: downloadController.js  healthController.js  platformController.js
backend/middleware/: errorHandler.js  rateLimiter.js
backend/routes/: downloadRoutes.js  healthRoutes.js  index.js  platformRoutes.js
backend/services/: downloadService.js  platformDownloadService.js  platformService.js
backend/utils/: urlValidator.js
config/: index.js  platforms.js
docs/: ARCHITECTURE.md  CODEBASE_INDEX.md  IMPLEMENTATION_EXAMPLE.md  LIBRARY_COMPARISON.md  QUICK_START.md  SEARCH_INTEGRATION_PLAN.md  SEARCH_VIEW.md  UI_IMPLEMENTATION.md  creating-first-release.md
frontend/: README.md  index.html  script.js  styles.css
scripts/: check-dll-deps.sh  create-release.sh
src/: main.rs
src/core/: downloader.rs  error.rs  mod.rs  queue.rs  search.rs
src/ui/: mod.rs  window.rs
src/ui/components/: download_queue.rs  mod.rs  preview_window.rs  search_view.rs
